Thu Oct 22 16:22:55 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtkclist.c (COLUMN_FROM_XPIXEL): samll fix for invisible
	columns

Thu Oct 22 02:29:53 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkfilesel.h: GtkType and macro fixups
	* gtk/gtkfilesel.c (gtk_file_selection_complete): set a pattern
	for the file selection widget to try a completion on (set the
	initial filter).

Wed Oct 14 14:34:04 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkmain.c: implement idle functions via GHook. this gives a
 	slight speed improvement and lessens code duplication.

Tue Oct 20 14:53:28 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdnd.c: Always send "drag_leave" to dests
	without GTK_DEST_DEFAULT_MOTION. 

Tue Oct 20 11:55:24 1998  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdk.c (gdk_event_translate): Handle DestroyNotify
	on destroyed windows so we clear the XID table properly.
	Finish up restructure of return value handling that
	was half-done before.

Tue Oct 20 12:57:10 1998  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdk.c (gdk_send_clientmessage_to_all): Hunt
	the window tree more comprehensively, so that we find
	client windows hidden under non-toplevels.

Tue Oct 20 12:43:04 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkselection.c (gtk_selection_data_set): 
	Maintain the null-termintation guarantee, even when 
	data = NULL, length = 0. (Warn on data = NULL, 
	length > 0)

Mon Oct 19 16:41:44 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.h (struct _GtkWidgetClass): Add in coordinates
	into function prototype for drag_data_received. 

Tue, 20 Oct 1998 11:33:10 +0200 Paolo Molaro <lupus@debian.org>

	* gtk/gtkdnd.h,gtk/gtkdnd.c: delete is a reserved word in c++.

Mon Oct 19 23:44:41 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtkclist.c: rearranged some functions
	(gtk_clist_set_column_auto_resize): new function. toggle auto_resize
 	flag of column
	(gtk_clist_set_column_resizeable): if resizeable disable auto_resize 